--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>后台系统</title>
+    <link rel="icon" href="/static/images/favicon.png" type="image/x-icon" />
+    <link rel="shortcut icon" href="/static/images/favicon.png" type="image/x-icon" />
 </head>
 
 <body>
 <div id="app">
     <router-view></router-view>
 </div>
-<script src="static/js/jquery.min.js"></script>
 </body>
 
 </html>
