change images directory name

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>后台系统</title>
-    <link rel="icon" href="/static/images/favicon.png" type="image/x-icon" />
-    <link rel="shortcut icon" href="/static/images/favicon.png" type="image/x-icon" />
+    <link rel="icon" href="/static/img/favicon.png" type="image/x-icon" />
+    <link rel="shortcut icon" href="/static/img/favicon.png" type="image/x-icon" />
 </head>
 
 <body>
