--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>后台系统</title>
+    <title>订单管理系统</title>
     <link rel="icon" href="/static/img/favicon.png" type="image/x-icon" />
     <link rel="shortcut icon" href="/static/img/favicon.png" type="image/x-icon" />
 </head>
